# laplacian-deformation

./: .gitignore  .npmignore  README.md  TODO  a.out.js  bumps.js  bumps.obj.js  bumps_dec.js  bumps_dec.obj.js  bunny.js  bunny.json  convert.js  convert.py  demo.html  demo.js  index.js  laplacian_deformation.js  laplacian_deformation.wasm  lol.js  lol3.js  makefile  mybunny  mylib.js  mytext  out.js  out.wasm  out2.js  package-lock.json  package.json  test.js  testing.cpp  testing.js  testmymodule.js
cpp/: CMakeLists.txt  README.md  build.bat
cpp/src/: laplacian_deformation.cpp  laplacian_deformation.hpp  laplacian_deformation.js  laplacian_deformation.wasm  main.cpp
demo/: modified-regl-camera.js  vis.js
meshconv/: main.cpp  makefile
meshes/: Armadillo.json  Armadillo.ply  armadillo_low_res.json  armadillo_low_res.ply  bunny.json  falcon.json  falcon.ply  sphere.json
minimal/: README.me  minimal.js
src/: csrgemtm.js  export.js  laplacian.js  laplacian_test.js  lib.js  vis.js
test/: csrgemtm.js  translate.js
util/: convert.js  convert.py
